testsuite/tests/profiling/should_fail/T17916.stderr

T17916.hs:6:13: error: [GHC-58481]
    Parse error on input ‘CapitalCase’. Expected one of VARID, STRING
